"""Test for allowing kernel_module to depend on ddk_module.

Note: You should only use this during a transient migration phase. Support for this may be
discontinued without notice. It is recommended that all kernel_module's are converted to ddk_module.
You may use this as a reference if you want to convert any kernel_module in your dependency tree
to ddk_module, without converting the child modules first.
"""

load("@bazel_skylib//rules:build_test.bzl", "build_test")

build_test(
    name = "mixed_dep_test",
    targets = [
        "//common-modules/virtual-device/kleaf_test/mixed_dep_test/kernel_module:my_kernel_module",
    ],
    visibility = ["//common-modules/virtual-device/kleaf_test:__subpackages__"],
)
